Fix ECOS servers configuration for Idea 2023.1.2